# CardProj

./: .breakpoints  db.sqlite3  pyproject.toml  replit.nix
accounts/: admin.py  backends.py  forms.py  middleware.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_is_active.py
chat/: consumers.py  middleware.py  models.py
chat/migrations/: 0001_initial.py
chat/templates/chat/: room.html
games/: admin.py  models.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_card_pile.py
gamesapi/: asgi.py  settings.py  urls.py
